# LG-TV-Display-Switcher

./: .gitignore  CHANGELOG.md  Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: release.yml
docs/: INSTALLATION.en.md  INSTALLATION.md
installer/: DefaultConfig.cfg  EnsureDisplayConfig.ps1  LG-TV-Display-Switcher.nsi
scripts/: Get-ReleaseNotes.ps1
src/: audio.rs  config.rs  display.rs  main.rs  setup.rs  webos.rs
streamdeck/dev.gomeng.lg-tv-display-switcher.sdPlugin/: .sdignore  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
streamdeck/dev.gomeng.lg-tv-display-switcher.sdPlugin/src/: plugin.ts
