[package]
name = "lg-tv-display-switcher"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "LG-TV-Display-Switcher"
path = "src/main.rs"

[dependencies]
native-tls = "0.2"
serde_json = "1"
windows = { version = "0.58", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }

[build-dependencies]
winresource = "0.1.31"
